# Automaton

./: CMakeLists.txt  LICENSE
include/: DFA.h
src/: DFA.cpp  main.cpp
